# You must change these to your own details.
[package]
name = "rust-webassembly-browser"
description = "Toy project to learn about rust and browsers"
version = "0.1.0"
authors = ["Kevin Farrell <you@example.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true


[dependencies]
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
wasm-bindgen = { version = "0.2.45", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.2", optional = true }


[dependencies.web-sys]
version = "0.3.22"
features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d'
]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

